# Games101_Homework

./: .gitignore  README.md
Assignment1/code/: CMakeLists.txt  main.cpp
Assignment2/code/: CMakeLists.txt  Triangle.cpp  main.cpp  rasterizer.cpp
Assignment3/code/: CMakeLists.txt  main.cpp  rasterizer.cpp
Assignment4/code/: CMakeLists.txt  main.cpp
Assignment5/code/: CMakeLists.txt  Renderer.cpp  Triangle.hpp
Assignment6/code/: BVH.cpp  Bounds3.hpp  Renderer.cpp  Triangle.hpp
Assignment7/code/: BVH.cpp  Bounds3.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Sphere.hpp  Triangle.hpp  global.hpp  main.cpp
